pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
  - name: nginx
    image: richard92/microserviceapp:latest
    ports:
    - containerPort: 80
