volumemountdeploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microserviceapp-deployment
  labels:
    app: microserviceapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: microserviceapp
  template:
    metadata:
      labels:
        app: microserviceapp
    spec:
      containers:
      - name: micro-service
        image: richard92/microservice:latest
        ports:
        - containerPort: 9097
        volumeMounts:
        - name: db-connection
          mountPath: /opt
      volumes:
      - name: db-connection
        configMap:
          name: cm-test
